# toro

./: Cargo.toml  flake.nix
src/: config.rs  date.rs  error.rs  exec.rs  filter.rs  grammar.pest  home.rs  interaction.rs  main.rs  projects.rs  todotxt.rs
src/commands/: completions.rs  config.rs  done.rs  edit.rs  git.rs  init.rs  list.rs  man.rs  mod.rs  new.rs  notes.rs  prioritize.rs  project.rs  rewrite.rs  set.rs  sync.rs  update.rs  view.rs
src/todotxt/: file.rs  mod.rs  tasks.rs
