[package]
name = "toro"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
humantime = "2.3.0"
pest = "2.8.3"
pest_derive = "2.8.3"
thiserror = "2.0.17"
xdg = "3.0.0"
