[package]
name = "toro"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"
clap_mangen = "0.2.29"
colored = "3.0.0"
humantime = "2.3.0"
pest = "2.8.3"
pest_derive = "2.8.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.7"
xdg = "3.0.0"

[profile.profiling]
inherits = "release"
debug = true
